gcc/testsuite/gdc.test/compilable/imports/test72a.d
module imports.test72a;
public import imports.test72b;
