gcc/testsuite/gdc.test/fail_compilation/test5412a.d
module test5412a;

import A = imports.test5412a;
import A = imports.test5412b;
